# nexus-ecosystem

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md
.gingx/: config.yaml  (+2 more)
gingx-sdd/: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml
gingx-sdd/docs/: ARCHITECTURE.md  MEDIUM-ARTICLE.md
gingx-sdd/gingx_sdd/: __init__.py  __main__.py  auto_delegate.py  changelog.py  cli.py  goal_tracker.py  hdu_tracker.py  init_project.py  knowledge_bridge.py  knowledge_builder.sh  modes.py  orchestrate.py  profile.py  prompt_builder.py
gingx-sdd/gingx_sdd/detector/: __init__.py  scanner.py
gingx-sdd/gingx_sdd/skills/: __init__.py  registry.py
gingx-sdd/skills/team/: architect-agent.md  dev-agent.md  explorer-agent.md  goal-agent.md  qa-agent.md  supervisor.md
gingx-sdd/templates/: interrogation-mode.md
gingx-sdd/templates/.claude/: settings.local.json
gingx-sdd/templates/.gingx/: config.yaml  suites.yaml
gingx-sdd/templates/openspec/: AGENTS.md
nexus-sdd/: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml
nexus-sdd/docs/: ARCHITECTURE.md  MEDIUM-ARTICLE.md
nexus-sdd/nexus_sdd/: __init__.py  __main__.py  cli.py  orchestrate.py  profile.py  prompt_builder.py
nexus-sdd/nexus_sdd/detector/: scanner.py
nexus-sdd/nexus_sdd/skills/: registry.py
nexus-sdd/skills/team/: architect-agent.md  dev-agent.md  devops-agent.md  po-agent.md  qa-agent.md  supervisor.md  ux-agent.md
nexus-sdd/templates/: spec-gate.md
nexus-sdd/templates/.claude/: settings.local.json
nexus-sdd/templates/.nexus/: suites.yaml
nexus-sdd/templates/openspec/: AGENTS.md
(+119 files in other folders)
